tests/paczka1/small_fuzzy/57530915.err
Error in line 1: FMf S322 10,94
Error in line 3: FMf S322 50,0
